--- a/milestone-module/mi01mo04/style.css
+++ b/milestone-module/mi01mo04/style.css
@@ -2,6 +2,34 @@ body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
-section{
+.top-banner{
     display: flex;
+    /* padding: 20px 40px; */
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
+h1{
+    font-size: 50px;
+}
+.heading-color{
+    color: orange;
+}
+.half-width{
+    width: 50%;
+    padding-left: 5%;
+}
+.half-width img{
+    width: 90%;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange, tomato);
+    color: white;
+    font-weight: 700;
+    padding: 10px 40px;
+    border-radius: 5px;
+}
+
+
+
+
