--- a/milestone-module/mi01mo04/style.css
+++ b/milestone-module/mi01mo04/style.css
@@ -7,6 +7,15 @@ body{
     /* padding: 20px 40px; */
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+    margin-bottom: 40px;
+}
+.middle-banner{
+    display: flex;
+    /* padding: 20px 40px; */
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right;
+    margin-top: 20px;
 }
 h1{
     font-size: 50px;
@@ -17,6 +26,7 @@ h1{
 .half-width{
     width: 50%;
     padding-left: 5%;
+    padding-right: 2%;
 }
 .half-width img{
     width: 90%;
