--- a/milestone-module/assignments/ass01/style.css
+++ b/milestone-module/assignments/ass01/style.css
@@ -50,6 +50,8 @@ header{
 .mb-1 h1{
     text-align: center;
     font-size: 45px;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
 .mb-2{
     width: 30%;
@@ -127,4 +129,28 @@ header{
     background-size: contain;
 }
 
+/* Application Section Design  */
 
+#img{
+    width: 50%;
+    margin-left: 30px;
+}
+#img img{
+    width: 60%;
+}
+
+/* Footer Section Design  */
+
+footer{
+    text-align: center;
+    background-color: black;
+    color: white;
+    padding: 20px 0px;
+}
+footer h1{
+    margin: 0;
+    font-size: 40px;
+}
+footer p{
+    margin: 0;
+}
