Semantic-Table-Form added | index-style modified

--- a/milestone-module/milestone02/module6-html5/style.css
+++ b/milestone-module/milestone02/module6-html5/style.css
@@ -1,6 +1,22 @@
 
 
 
+nav ul{
+    display: flex;
+}
+nav li{
+    list-style: none;
+}
+nav li:hover{
+    background-color: lightgray;
+}
+nav li a{
+    text-decoration: none;
+    color: gold;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
 .title{
     color: red;
     text-align: center;
