--- a/milestone-module/milestone02/module6-html5/style.css
+++ b/milestone-module/milestone02/module6-html5/style.css
@@ -9,12 +9,14 @@ nav li{
 }
 nav li:hover{
     background-color: lightgray;
+    border-radius: 5px;
 }
 nav li a{
     text-decoration: none;
     color: gold;
     font-size: 20px;
     margin-right: 10px;
+    padding: 0px 10px;
 }
 
 .title{
