--- a/milestone-module/milestone02/module8-responsive-css-layout/style.css
+++ b/milestone-module/milestone02/module8-responsive-css-layout/style.css
@@ -124,4 +124,88 @@ nav{
 }
 /* Calendar Design End */
 
+/* Responsive Design Start */
+.menu-container{
+    display: flex;
+    flex-wrap: wrap;  /* Note */
+}
+.food{
+    border: 3px solid peru;
+    width: 300px;
+    margin: 5px;
+    padding: 5px;
+    text-align: justify;
+}
+.food img{
+    width: 75%;
+}
+/* -------CSS Breakpoint------ */
+/* @media (max-width: 700px) {
+    .food{
+        background-color: orange;
+        margin-bottom: 10px;
+    }
+    .menu-container{
+        flex-direction: column;
+        
+    }
+}
+@media (min-width: 900px) {
+    .food {
+        background-color: palegoldenrod;
+    }
+} */
 
+/* Or 
+Note: flex-wrap: wrap; */
+
+/* Responsive Design End */
+
+
+/* Album Design Start */
+.photo-album{
+    display: flex;
+    flex-wrap: wrap;
+}
+.photo-frame{
+    width: 300px;
+    height: 187px;
+    border: 2px solid goldenrod;
+    border-radius: 10px;
+    position: relative;
+    margin: 10px;
+    overflow: hidden;
+}
+.photo img{
+    width: 100%;
+    border-radius: 10px;
+}
+.photo-details{
+    position: absolute;
+    width: 300px;
+    height: 100%;
+    top: 0;
+    color: whitesmoke;
+    display: none;
+}
+.photo-details h3{
+    background-color: rgba(255, 99, 71, 0.445);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 60px;
+    border-radius: 5px;
+    /* text-align: center; */
+}
+.photo-frame:hover .photo-details{
+    display: block;
+    background-color: rgba(255, 255, 0, 0.247);
+}
+.photo-frame:hover .photo{
+    /* transform: scale(1.3) rotate(360deg) skew(45deg); */
+    transform: scale(1.3);
+    transition: transform 2s ease-in-out;
+}
+
+/* scroll --> sticky, fixed; Other --> absulote, relative; */
+/* Album Design End */
