--- a/milestone-module/milestone02/module8-responsive-css-layout/style.css
+++ b/milestone-module/milestone02/module8-responsive-css-layout/style.css
@@ -48,6 +48,12 @@ nav a{
     font-size: 1.5em;
     margin-right: 15px;
 }
+nav a:hover{
+    color: tomato;
+    background-color: gold;
+    border-radius: 5px;
+    padding: 5px;
+}
 nav{
     display: flex;
     justify-content: space-between;
@@ -140,21 +146,27 @@ nav{
     width: 75%;
 }
 /* -------CSS Breakpoint------ */
-/* @media (max-width: 700px) {
+@media (max-width: 700px) {
     .food{
         background-color: orange;
         margin-bottom: 10px;
+        width: 80%;
     }
     .menu-container{
         flex-direction: column;
         
     }
 }
+@media (min-width:700px) and (max-width:900px) {
+    .food{
+        background-color: yellow;
+    }
+}
 @media (min-width: 900px) {
     .food {
         background-color: palegoldenrod;
     }
-} */
+}
 
 /* Or 
 Note: flex-wrap: wrap; */
