--- a/milestone-module/milestone02/module9-html-css-landing-page/styles/style.css
+++ b/milestone-module/milestone02/module9-html-css-landing-page/styles/style.css
@@ -2,6 +2,27 @@
     margin: 0%;
 }
 
+/* poppins font  */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+/* common styles or utilities*/
+body{
+    font-family: 'Poppins', sans-serif;
+    background-color: #F3F1FF;
+}
+main{
+    display: flex;
+    justify-content: center;
+}
+.container{
+    background-color: #FFFFFF;
+    width: 870px;
+    padding: 30px;
+}
+hr{
+    border: 1px solid #D1D1D1;
+}
+
 /* header & navigation start  */
 header{
     display: flex;
@@ -26,17 +47,30 @@ header a{
 /* header & navigation end  */
 
 /* top players style  */
+.top-players{
+    margin-bottom: 30px;
+}
+.section-title{
+    color: #562EFF;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
 .players{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
 }
 .player{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     
 }
 .player img{
     width: 56px;
     height: 56px;
+}
+.player-name{
+    margin-left: 16px;
+    font-size: 18px;
 }
