--- a/milestone-module/assignments/ass02/style.css
+++ b/milestone-module/assignments/ass02/style.css
@@ -2,14 +2,14 @@
 
 body{
     font-family: 'Poppins', sans-serif;
-
+    margin: 0;
 }
 
 /* header Design Start */
 header{
     display: flex;
     justify-content: space-between;
-    margin: 0 90px;
+    margin: 25px 90px;
 }
 .header-title > a{
     font-size: 1.6em;
@@ -80,6 +80,9 @@ nav a{
     margin: 0 290px;
     align-items: center;
     padding: 15px 50px;
+}
+.sponsor a{
+    margin: 0px 20px;
 }
 hr{
     color: lightgray;
@@ -194,9 +197,6 @@ footer h1{
 footer h3{
     margin: 0 0 10px;
 }
-footer span{
-    /* margin-bottom: 20px; */
-}
 footer a{
     color: whitesmoke;
     margin: 0px 10px;
@@ -205,3 +205,26 @@ footer a{
     padding-bottom: 40px;
 }
 /* footer section end */
+
+/* css breakpoint */
+@media (max-width: 600px) {
+    .header{
+        display: block;
+        justify-content: center;
+        margin: 10px 0px;
+        text-align: center;
+    }
+    .header-title > a {
+        font-size: 25px;
+        text-decoration: none;
+        color: black;
+        margin-left: 0;
+    }
+    nav a {
+        text-decoration: none;
+        color: black;
+        font-size: 17px;
+        margin-left: 7px;
+    }
+    
+}
