--- a/milestone-module/assignments/ass02/style.css
+++ b/milestone-module/assignments/ass02/style.css
@@ -206,25 +206,78 @@ footer a{
 }
 /* footer section end */
 
+
 /* css breakpoint */
-@media (max-width: 600px) {
-    .header{
-        display: block;
-        justify-content: center;
-        margin: 10px 0px;
-        text-align: center;
-    }
-    .header-title > a {
-        font-size: 25px;
-        text-decoration: none;
-        color: black;
-        margin-left: 0;
-    }
-    nav a {
-        text-decoration: none;
-        color: black;
-        font-size: 17px;
-        margin-left: 7px;
-    }
+
+/* @media only screen and (min-width: 992px) and (max-width: 1200px) {
     
 }
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    
+}
+@media only screen and (max-width: 767px) {
+    
+}
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    
+} */
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+    header {
+        /* display: flex; */
+        justify-content: center;
+        margin: 10px auto;
+    }
+    .header-title > a {
+        margin-left: 16px;
+    }
+    nav a {
+        margin-left: 12px;
+    }
+    header nav{
+        margin-left: 110px;
+    }
+    .top-left h1 {
+        font-size: 1.8em;
+    }
+    .top-left p {
+        font-size: 1em;
+    }
+    .top-left a {
+        padding: 10px 15px;
+    }
+    .top-right img {
+        margin-left: 25px;
+        width: 95%;
+    }
+    .sponsor img {
+        width: 70px;
+        margin: 0 -5px;
+    }
+    .bottom-left {
+        width: 30%;
+    }
+    .bottom-right {
+        width: 45%;
+        padding: 10px;
+        text-align: justify;
+        margin: 0;
+    }
+    .top-right h1 {
+        font-size: 2.5em;
+    }
+    .top-section {
+        margin: 40px 0;
+    }
+ 
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    
+}
+@media only screen and (max-width: 767px) {
+    
+}
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    
+}
+
