Ass02: Full and Medium screen responsive done

--- a/milestone-module/assignments/ass02/style.css
+++ b/milestone-module/assignments/ass02/style.css
@@ -23,6 +23,16 @@ nav a{
     font-size: 1.4em;
     margin-left: 30px;
 }
+nav a:hover{
+    text-decoration: none;
+    color: whitesmoke;
+    /* font-size: 1.4em; */
+    /* font-weight: 700; */
+    padding: 10px auto;
+    border-radius: 10px;
+    background-color: #e02b6c;
+    
+}
 /* header Design End  */
 
 /* main Design Start */
@@ -62,11 +72,10 @@ nav a{
 }
 .top-right{
     width: 35%;
+    text-align: center;
     /* border: 1px solid red; */
 }
-.top-right img{
-    margin-left: 50px;
-}
+
 .top-right:hover img{
     transform: scale(1.2) rotate(40deg);
     transition: transform 3s ease;
@@ -143,6 +152,15 @@ hr{
     font-size: 1.2em;
     font-weight: 700;
 }
+.grid-link:hover a{
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 1.2em;
+    font-weight: 700;
+    background-color: #e02b6c;
+    padding: 10px;
+    border-radius: 10px;
+}
 /* grid section end */
 
 /* bottom section start */
@@ -209,7 +227,10 @@ footer a{
 
 /* css breakpoint */
 
-/* @media only screen and (min-width: 992px) and (max-width: 1200px) {
+/* @media only screen and (min-width: 1201px) {
+    
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
     
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -221,6 +242,27 @@ footer a{
 @media only screen and (min-width: 480px) and (max-width: 767px) {
     
 } */
+
+@media only screen and (min-width: 1201px) {
+    .top-right{
+        text-align: center;
+    }
+    .top-right h1 {
+        font-size: 2.5em;
+    }
+    .bottom-right{
+        text-align: justify;
+    }
+    .grid-link a {
+        font-size: 1.5em;
+    }
+    .fa-star, .fa-star-half-alt, .number, .grid-blog > p {
+        font-size: 0.8em;
+    }
+    .grid-blog h3 {
+        font-size: 1.5em;
+    }
+}
 
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
     header {
@@ -259,7 +301,7 @@ footer a{
     }
     .bottom-right {
         width: 45%;
-        padding: 10px;
+        padding: 15px;
         text-align: justify;
         margin: 0;
     }
@@ -269,10 +311,96 @@ footer a{
     .top-section {
         margin: 40px 0;
     }
+    .fa-star, .fa-star-half-alt, .number, .grid-blog > p {
+        font-size: 0.8em;
+    }
+    .grid-blog h3 {
+        font-size: 1.5em;
+    }
  
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-    
+    .header-title > a {
+        font-size: 1.2em;
+        margin-left: 0;
+    }
+    nav a {
+        font-size: 1em;
+        margin-left: 10px;
+    }
+    .top-section {
+        justify-content: space-evenly;
+    }
+    .top-right img{
+        width: 100%;
+    }
+    .top-right a {
+        font-size: 1em;
+        padding: 6px 13px;
+    }
+    .top-left h1 {
+        font-size: 1.5em;
+    }
+    .top-left p {
+        font-size: 0.8em;
+    }
+    .top-left a {
+        font-size: 1em;
+        padding: 10px 12px;
+    }
+    hr {
+        margin: 0 60px;
+        margin-top: 0px;
+    }
+    .hr {
+        margin-top: 65px;
+    }
+    .sponsor img{
+        width: 65px;
+    }
+    .sponsor a {
+        margin: 0px 15px;
+    }
+    .grid-blogs {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .grid-section {
+        margin: 110px 60px;
+    }
+    .grid-link a {
+        font-size: 1.5em;
+    }
+    .grid-link:hover a{
+        text-decoration: none;
+        color: whitesmoke;
+        font-size: 1.5em;
+        font-weight: 700;
+        background-color: #e02b6c;
+        padding: 10px;
+        border-radius: 10px;
+    }
+    .top-right h1 {
+        font-size: 1.5em;
+    }
+    .top-right p {
+        font-size: 0.8em;
+        margin-bottom: 20px;
+    }
+    .grid-blog h3 {
+        font-size: 1.5em;
+    }
+    .fa-star, .fa-star-half-alt, .number, .grid-blog > p {
+        font-size: 0.8em;
+    }
+    .grid-section {
+        margin: 45px 60px;
+    }
+    footer h1 {
+        font-size: 25px;
+    }
+    footer h3 {
+        font-size: 15px;
+    }
 }
 @media only screen and (max-width: 767px) {
     
