--- a/milestone-module/assignments/ass02/style.css
+++ b/milestone-module/assignments/ass02/style.css
@@ -439,7 +439,7 @@ footer a{
     .top-left {
         width: 90%;
         padding: 15px;
-        text-align: justify;
+        text-align: center;
         margin-bottom: 5px;
     }
     .top-left:hover, .top-right:hover{
@@ -512,7 +512,7 @@ footer a{
     .top-right p {
         font-size: 0.8em;
         margin-bottom: 20px;
-        text-align: justify;
+        text-align: center;
     }
     .grid-blog h3 {
         font-size: 1.5em;
@@ -561,7 +561,7 @@ footer a{
     .top-left {
         width: 90%;
         padding: 15px;
-        text-align: justify;
+        text-align: center;
         margin-bottom: 5px;
     }
     .top-left:hover, .top-right:hover{
@@ -634,7 +634,7 @@ footer a{
     .top-right p {
         font-size: 0.8em;
         margin-bottom: 20px;
-        text-align: justify;
+        text-align: center;
     }
     .grid-blog h3 {
         font-size: 1.5em;
