Module9: Navber Modified

--- a/milestone-module/milestone02/module9-html-css-landing-page/styles/style.css
+++ b/milestone-module/milestone02/module9-html-css-landing-page/styles/style.css
@@ -16,7 +16,7 @@ main{
 }
 .container{
     background-color: #FFFFFF;
-    width: 870px;
+    width: 70%;
     padding: 30px;
 }
 hr{
@@ -27,22 +27,57 @@ hr{
 header{
     display: flex;
     justify-content: space-between;
-    background-color: blue;
+    background-color: #552dff;
+    padding: 0px 11%;
 }
-header a{
-    /* text-decoration: none;
-    font-size: 2em;
-    color: whitesmoke;
-    margin: 0 10px; */
-    
-    
-}
-.logo1{
+
+.logo1 {
     margin-left: 20px;
+    display: flex;
+    align-items: center;
+}
+.logo1 a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    margin-right: 10px;
+    padding: 5px;
+}
+.logo1 a:hover{
+    background-color: tomato;
+    border-radius: 10px;
 }
 .logo1 a img{
-    width: 10%;
+    width: 51px;
+    height: 51px;
     padding: 5px;
+}
+nav.logo2 {
+    margin-right: 3%;
+    display: flex;
+}
+nav ul{
+    display: flex;
+    align-items: center;
+}
+nav ul li{
+    list-style: none;
+    margin-left: 15px;
+    padding: 5px;
+}
+nav ul li:hover{
+    background-color: tomato;
+    border-radius: 10px;
+    
+}
+nav ul li a{
+   text-decoration: none;
+   color: white;
+   font-size: 20px;
+}
+nav ul li a img{
+    width: 51px;
+    height: 51px;
 }
 /* header & navigation end  */
 
@@ -74,3 +109,5 @@ header a{
     margin-left: 16px;
     font-size: 18px;
 }
+
+
