--- a/milestone-module/milestone02/module9-html-css-landing-page/styles/style.css
+++ b/milestone-module/milestone02/module9-html-css-landing-page/styles/style.css
@@ -106,7 +106,8 @@ nav ul li a img{
     display: flex;
     /* justify-content: center; */
     align-items: center;
-    
+    margin-right: 10px;
+    padding: 5px;
 }
 .player img{
     width: 56px;
