Module34: Call dynamic API, load dynamic data to display

--- a/milestone-module/milestone06/module34-API-examples/css/03countries.css
+++ b/milestone-module/milestone06/module34-API-examples/css/03countries.css
@@ -1,6 +1,10 @@
 
 /* 34.3 International Travel, Display countries name, capital */
 
+#countries {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
 .country {
     border: 2px solid tomato;
     margin: 10px;
