--- a/milestone-module/milestone08/module45-react-core-concepts-jsx-props-state/01reactjs-core-concepts/src/App.css
+++ b/milestone-module/milestone08/module45-react-core-concepts-jsx-props-state/01reactjs-core-concepts/src/App.css
@@ -40,6 +40,16 @@
 .container {
   color: red;
   background-color: aquamarine;
-  padding: 20px;
+  border: 3px solid red;
   border-radius: 20px;
+  padding: 20px;
+  margin: 10px;
+}
+
+.person {
+  background-color: darkkhaki;
+  border: 3px solid rebeccapurple;
+  border-radius: 20px;
+  padding: 20px;
+  margin: 10px;
 }
