Concept Recap - JSX - components - props - display array of objects

--- a/milestone-module/milestone08/module45-react-core-concepts-jsx-props-state/02reactjs-core-concepts2/src/App.css
+++ b/milestone-module/milestone08/module45-react-core-concepts-jsx-props-state/02reactjs-core-concepts2/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.product {
+  background-color: lightpink;
+  border: 15px;
+  border-radius: 20px;
+  margin: 15px;
+  padding: 15px;
+}
