Module Summary | React Core Concepts | Recap

--- a/milestone-module/milestone08/module45-react-core-concepts-jsx-props-state/03reactjs-core-concepts3/src/App.css
+++ b/milestone-module/milestone08/module45-react-core-concepts-jsx-props-state/03reactjs-core-concepts3/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.comment {
+  background-color: antiquewhite;
+  border: 3px solid chocolate;
+  border-radius: 25px;
+  margin: 20px;
+  padding: 10px;
+}
+
+span {
+  color: blue;
+}
