--- a/milestone-module/milestone08/module46-simple-react-rest-countries/01react-rest-countries/src/App.css
+++ b/milestone-module/milestone08/module46-simple-react-rest-countries/01react-rest-countries/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.country {
+  background-color: bisque;
+  border: 2px solid peru;
+  border-radius: 25px;
+  margin: 10px 50px;
+  padding: 10px;
+}
