--- a/milestone-module/milestone08/module46-simple-react-rest-countries/01react-rest-countries/src/App.css
+++ b/milestone-module/milestone08/module46-simple-react-rest-countries/01react-rest-countries/src/App.css
@@ -36,10 +36,24 @@
     transform: rotate(360deg);
   }
 }
-.allCountry2{
-  /* display: grid;
+
+.heading-container2 {
+  border: 1px solid red;
+  border-radius: 20px;
+  margin: 5px 20%;
+}
+
+.heading-container2 h3 b {
+  color: red;
+  background-color: gold;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.countries-container2{
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px; */
+  grid-gap: 20px;
 
   /* display: flex;
   align-items: center;
@@ -47,10 +61,16 @@
   flex-direction: row;
   flex-wrap: wrap; */
 }
+
 .country2 {
   background-color: bisque;
   border: 2px solid peru;
   border-radius: 25px;
-  margin: 10px 50px;
+  margin: 10px;
   padding: 10px;
+}
+
+.country2 img {
+  width: 100%;
+  height: 210px;
 }
