How to build & host your react app in Netlify | npm run build

--- a/milestone-module/milestone08/module46-simple-react-rest-countries/01react-rest-countries/src/components/Header/Header.css
+++ b/milestone-module/milestone08/module46-simple-react-rest-countries/01react-rest-countries/src/components/Header/Header.css
@@ -1,7 +1,21 @@
+.header-container {
+    background-color: rgb(86, 86, 253);
+    margin-top: 0px;
+    padding: 5px 0px 10px;
+
+}
+
 nav a {
     text-decoration: none;
     margin-right: 20px;
+    font-weight: bold;
+    color: blue;
 }
+
+nav a:hover {
+    color: gold;
+}
+
 span {
     color: gold;
 }
