--- a/milestone-module/milestone08/module46.5-react-core-concepts-recap-and-practice/01reactjs-core-concepts-recap/src/App.css
+++ b/milestone-module/milestone08/module46.5-react-core-concepts-recap-and-practice/01reactjs-core-concepts-recap/src/App.css
@@ -42,3 +42,17 @@
   padding: 10px;
   box-shadow: 5px 5px 15px gray;
 }
+
+.post-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 5px;
+}
+
+.post {
+  background-color: lemonchiffon;
+  border: 2px solid lightcoral;
+  border-radius: 20px;
+  margin: 10px;
+  padding: 10px;
+}
