--- a/milestone-module/milestone08/module46.5-react-core-concepts-recap-and-practice/02reactjs-revision-checklist-practice/src/App.css
+++ b/milestone-module/milestone08/module46.5-react-core-concepts-recap-and-practice/02reactjs-revision-checklist-practice/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  background-color: bisque;
+  margin: 10px 10px 0px;
+  padding: 20px;
+  border-radius: 20px;
 }
 
 .App-logo {
@@ -35,4 +39,28 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.blog {
+  border-radius: 20px;
+  margin: 2px 20px;
+  padding: 10px;
+}
+
+.blogs {
+  background-color: #fde6c9;
+  border: 1px solid red;
+  border-radius: 20px;
+  margin: 10px 20px 20px;
+  padding: 10px;
+  text-align: justify;
+  box-shadow: 2px 2px 10px gray;
+}
+.blogs h2 {
+  color: blue;
+  font-size: x-large;
+  margin-bottom: 0px;
+}
+.blogs p {
+  font-weight: 600;
 }
