--- a/milestone-module/milestone08/module46.5-react-core-concepts-recap-and-practice/02reactjs-revision-checklist-practice/src/App.css
+++ b/milestone-module/milestone08/module46.5-react-core-concepts-recap-and-practice/02reactjs-revision-checklist-practice/src/App.css
@@ -1,9 +1,6 @@
 .App {
   text-align: center;
-  background-color: bisque;
-  margin: 10px 10px 0px;
-  padding: 20px;
-  border-radius: 20px;
+
 }
 
 .App-logo {
@@ -39,6 +36,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.containers {
+  background-color: bisque;
+  margin: 10px 10px 0px;
+  padding: 20px;
+  border-radius: 20px;
 }
 
 .blog {
