--- a/milestone-module/milestone08/module47-Conceptual-how-React-works/01how-react-works/src/App.css
+++ b/milestone-module/milestone08/module47-Conceptual-how-React-works/01how-react-works/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  border: 2px solid salmon;
+  margin: 30px;
+  border-radius: 20px;
+  padding: 8px;
 }
 
 .App-logo {
