--- a/milestone-module/milestone08/module49.5-Simple-React-Revision-Day/01food-uganda-practice/src/components/Header/Header.css
+++ b/milestone-module/milestone08/module49.5-Simple-React-Revision-Day/01food-uganda-practice/src/components/Header/Header.css
@@ -2,7 +2,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    height: 70px;
-    background-color: aqua;
+    height: 80px;
+    background-color: #2d345c;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.header-container a {
+    margin-left: 25px;
+    text-decoration: none;
+    color: white;
+}
+
+.header-container a:hover {
+    color: orange;
 }
