--- a/milestone-module/milestone08/module49.5-Simple-React-Revision-Day/01food-uganda-practice/src/components/Shops/Shops.css
+++ b/milestone-module/milestone08/module49.5-Simple-React-Revision-Day/01food-uganda-practice/src/components/Shops/Shops.css
@@ -7,8 +7,15 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     background-color: antiquewhite;
+    padding: 50px;
 }
 
 .summary-container {
     background-color: bisque;
+}
+
+@media screen and (max-width:1100px) {
+    .product-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
