style changed slightly

--- a/milestone-module/milestone08/module49.5-Simple-React-Revision-Day/01food-uganda-practice/src/components/Summary/Summary.css
+++ b/milestone-module/milestone08/module49.5-Simple-React-Revision-Day/01food-uganda-practice/src/components/Summary/Summary.css
@@ -2,3 +2,11 @@
     position: sticky;
     top: 0;
 }
+
+.product-name {
+    background-color: bisque;
+    border: 1px solid #fda7a7;
+    border-radius: 10px;
+    margin: 5px;
+    padding: 0 5px;
+}
