--- a/milestone-module/milestone08/module48-simple-react-SPA-with-simple-E-commerce/01ema-john-simple/src/components/ReviewItem/ReviewItem.css
+++ b/milestone-module/milestone08/module48-simple-react-SPA-with-simple-E-commerce/01ema-john-simple/src/components/ReviewItem/ReviewItem.css
@@ -18,3 +18,20 @@
 .review-item-details p {
     margin: 0;
 }
+
+.review-item .delete-container {
+    display: flex;
+    align-items: center;
+}
+.review-item .delete-button {
+    background-color: rgba(235, 87, 87, 0.3);
+    border: 0;
+    height: 55px;
+    width: 55px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.delete-icon {
+    color: rgba(235, 87, 87, 1);
+    font-size: 27px;
+}
