--- a/milestone-module/milestone08/module48-simple-react-SPA-with-simple-E-commerce/01ema-john-simple/src/components/Shop/Shop.css
+++ b/milestone-module/milestone08/module48-simple-react-SPA-with-simple-E-commerce/01ema-john-simple/src/components/Shop/Shop.css
@@ -1,6 +1,6 @@
 .shop-container {
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 5fr 2fr;
 }
 
 .products-container {
@@ -14,8 +14,29 @@
     background-color: rgba(255, 153, 0, 0.3);
 }
 
-@media screen and (max-width:1100px) {
+@media screen and (max-width:1400px) {
+    .shop-container {
+        grid-template-columns: 4fr 2fr;
+    }
     .products-container {
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width:1000px) {
+    .shop-container {
+        grid-template-columns: 4fr 3fr;
+    }
+    .products-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (max-width:600px) {
+    .shop-container {
+        grid-template-columns: 3fr 3fr;
+    }
+    .products-container {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
