--- a/milestone-module/milestone09/module54-routerDeploy-simpleContextAPI-devtool/01tshirt-mania/src/components/Grandpa/Grandpa.css
+++ b/milestone-module/milestone09/module54-routerDeploy-simpleContextAPI-devtool/01tshirt-mania/src/components/Grandpa/Grandpa.css
@@ -4,3 +4,10 @@
     padding: 5px;
     border-radius: 10px;
 }
+.grandpa p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.grandpa > p > button {
+    margin-right: 10px;
+}
