--- a/milestone-module/milestone09/module54-routerDeploy-simpleContextAPI-devtool/01tshirt-mania/src/components/Cart/Cart.css
+++ b/milestone-module/milestone09/module54-routerDeploy-simpleContextAPI-devtool/01tshirt-mania/src/components/Cart/Cart.css
@@ -15,10 +15,15 @@
     border-radius: 5px;
 }
 .orange-button {
-    background-color: orange;
-    color: whitesmoke;
-    border: 1px solid lightgray;
     border-radius: 5px;
     margin-right: 5px;
     padding: 2px 5px;
+    border: 1px solid lightgray;
+}
+.orange-button:hover {
+    background-color: orange;
+    color: whitesmoke;
+}
+.number-color {
+    color: orange;
 }
