--- a/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Repository/Repository.css
+++ b/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Repository/Repository.css
@@ -5,13 +5,16 @@
     text-align: left;
     padding: 10px;
 }
-.repo h2 {
+/* .repo h2 {
     margin: 0;
     font-size: 15px;
     color: #0D37C3;
-}
+} */
 .repo a {
     text-decoration: none;
+    color: #2085FF;
+    font-size: 17px;
+    font-weight: 600;
 }
 .repo a:hover {
     text-decoration: underline;
@@ -34,7 +37,9 @@
     padding: 1px 5px;
 }
 .topics {
-    background-color: #21262D;
+    /* background-color: #21262D; */
+    background-color: #13233A;
+    color: #2B91FF;
     margin-right: 5px;
     padding: 0 5px;
     border-radius: 5px;
